# facemesh3D

./: .gitignore  ANIMATION_VIEWS_UPDATE.md  CLEANUP_PLAN.md  DepthCamera_2025-05-25-19-05-53.json  FEATURE_EXTRACTION_GUIDE.md  FILE_DISCOVERY_FIX.md  FINAL_FIX_STATUS.md  MODEL_TRAINING_GUIDE.md  MODEL_TRAINING_IMPROVEMENTS.md  OPEN3D_FIX_SUMMARY.md  POST_FILTER_MOVEMENT_COMPLETE.md  README.md  README_ANIMATIONS.md  REFACTOR_SUMMARY.md  RenderOption_2025-05-28-11-58-55.json  SYSTEM_PROMPT.md  ScreenCamera_2025-05-26-22-41-05.json  ScreenCamera_2025-05-26-22-41-24.json  ScreenCamera_2025-05-26-22-43-18.json  UI_IMPROVEMENTS_SUMMARY.md  debug_file_paths.py  demo_model_training.py  demo_random_forest.py  example1_basic.ply  example2_colored.ply  example3_from_csv.ply  example4_processed.ply  face_mesh_example.py  facial_mesh.ply  main.py  mesh_from_pointcloud_examples.py  pyproject.toml  requirements.txt  rotate_pointcloud.py  run_app.py  sample_points.csv  sample_sphere.ply  sample_torus.ply  test_facial_import.py  test_feature_extraction.py  (+10 more)
backup_apps/: streamlit_ui.py  zoetrope_app.py
data/: README.md
helix_animation/: frame_001_0010.0deg.ply  frame_004_0040.0deg.ply  frame_007_0070.0deg.ply  frame_009_0090.0deg.ply  frame_012_0120.0deg.ply  frame_014_0140.0deg.ply  frame_028_0280.0deg.ply  frame_030_0300.0deg.ply  frame_034_0340.0deg.ply  frame_035_0350.0deg.ply
memory/: README.md  REORGANIZATION_SUMMARY.md
quick_test/: frame_002_0060.0deg.ply  frame_004_0120.0deg.ply  frame_010_0300.0deg.ply  frame_011_0330.0deg.ply
source/: __init__.py  animation_player.py  (+28 more)
(+2787 files in other folders)
