[project]
name = "facemesh3d"
version = "0.1.0"
description = "Facial microexpression analysis tool with 3D point cloud visualization."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.28.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "pillow>=10.0.0",
    "open3d>=0.17.0",
    "pandas>=2.0.0",
    "opencv-python>=4.8.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "black>=23.0.0", "ruff>=0.1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["source"]